# stay-awake-menubar

./: .gitignore  LICENSE  README.md  control_panel.py  main.py  pyproject.toml  stay_awake.py  test_stay_awake.py
.github/workflows/: ci.yml
Resources/: AppIcon.icns
scripts/: make_app.sh  make_app_icon.py  make_banner.py  make_icons.py
